<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout style="@style/BottomSheetContainer">

        <LinearLayout
            android:id="@+id/dialog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/title_block"
                style="@style/BottomSheetHeaderBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="vertical">

                <View
                    android:id="@+id/swiper"
                    style="@style/BottomSheetSwiper" />

                <TextView
                    android:id="@+id/title_tv"
                    style="@style/Headline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/text_message" />

            </LinearLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/scroll_view_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.example.stegomessenger.common.view.MyCheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="24dp" />

                    <LinearLayout
                        android:id="@+id/stego_container_block"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView
                            style="@style/Body"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/image_container_colon" />

                        <ImageView
                            android:id="@+id/added_container_iv"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:adjustViewBounds="false"
                            android:scaleType="centerCrop" />

                        <FrameLayout
                            android:id="@+id/add_container_block"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/bg_add_image">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center"
                                android:adjustViewBounds="false"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_24_plus" />

                        </FrameLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/stego_content_block"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <TextView
                            style="@style/Body"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/image_colon" />

                        <ImageView
                            android:id="@+id/added_content_iv"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:adjustViewBounds="false"
                            android:scaleType="centerCrop" />

                        <FrameLayout
                            android:id="@+id/add_content_block"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/bg_add_image">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center"
                                android:adjustViewBounds="false"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_24_plus" />

                        </FrameLayout>

                    </LinearLayout>


                    <EditText
                        android:id="@+id/content_et"
                        style="@style/DefaultEditTextStyle"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:hint="@string/text_colon" />


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <FrameLayout
                android:id="@+id/button_block"
                style="@style/BottomSheetFooterBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                tools:visibility="visible">

                <LinearLayout
                    android:id="@+id/send_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="visible">


                    <TextView
                        style="@style/Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:text="@string/send"
                        android:textColor="@color/white" />
                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:progressTint="@color/black" />

    </FrameLayout>

</FrameLayout>

